--- a/index.html
+++ b/index.html
@@ -57,29 +57,30 @@
            </button>
            <div class="modal-header">
                <h3>Sign Up</h3>
+            </div>
                <div class="modal-content">
                    <p>Register with us to get offers, support and more</p>
                    <form  class="modal-form">
                        <div>
                            <label for="name">Name</label>
-                           <input type="text" id="name" placeholder="Enter Name">
+                           <input type="text" class="form-input" id="name" placeholder="Enter Name">
                        </div>
                        <div>
                         <label for="email">Email</label>
-                        <input type="email" id="email" placeholder="Enter Email">
+                        <input type="email" class="form-input" id="email" placeholder="Enter Email">
                     </div>
                    <div>
                         <label for="password">Password</label>
-                        <input type="password" id="password" placeholder="Enter  Password">
+                        <input type="password" class="form-input" id="password" placeholder="Enter  Password">
                     </div> 
                     <div>
                         <label for="password2">Confirm Password</label>
-                        <input type="password" id="password2" placeholder="Confirm Password">
+                        <input type="password" class="form-input" id="password2" placeholder="Confirm Password">
                     </div> 
                     <input type="submit" value="Submit" class="submit-btn" />
                    </form>
                </div>
-           </div>
+            </div>
        </div>
    </div>
     
